--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script type="text/javascript" src="data.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="./src/data.js"></script>
+    <script type="text/javascript" src="./src/app.js"></script>
+    <link rel="stylesheet" href="./style.css">
     <title>Kalvium Premier League</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
 
 <body>
-
     <nav class="nav-bar">
         <h1 style="color:red ;">KPL</h1>
-        <img src="assets/dreamteam.svg" class="DREAMTEAM">
+        <img src="./assets/dreamteam.svg" class="DREAMTEAM">
     </nav>
     <section class="manager-details">
         <div class="Rectangle">
@@ -43,7 +42,7 @@
         <div class="Rectangle">
             <p class="title">FORMATION</p>
             <div class="formation-container">
-                <img src="assets/group-5.svg" class="playground">
+                <img src="./assets/group-5.svg" class="playground">
                 <img src="./assets/goalkeeper.svg" alt="player" class="goalkeeper">
                 <div class="player-container defence">
                 </div>
@@ -115,10 +114,9 @@
 
         </div>
         <div id="player-container">
-
         </div>
     </section>
-    <script type="text/javascript" src="link.js"></script>
+    <script type="text/javascript" src="./src/link.js"></script>
 </body>
 
 </html>
